--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=
 MYSQL_DATABASE=pss
+# MYSQL_MAX_OPEN_CONNS=25
+# MYSQL_MAX_IDLE_CONNS=5
+# MYSQL_CONN_MAX_LIFETIME_SEC=300
 
 # TLS (optional; set both for HTTPS)
 # TLS_CERT_FILE=
