--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ MYSQL_DATABASE=pss
 # Trusted proxy CIDRs for RealIP (comma-separated)
 TRUSTED_PROXY_CIDRS=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,::1/128,fc00::/7
 
+# CORS: allowed origins for browser requests (comma-separated). Default: http://localhost:3000
+# CORS_ORIGINS=http://localhost:3000,https://myapp.example.com
+
 # Logging
 LOG_LEVEL=info
 
